Fixed incompatible lengths

--- a/scripts/MeshakkelatyV2.ipynb
+++ b/scripts/MeshakkelatyV2.ipynb
@@ -95,14 +95,17 @@
     "            y = [self.DIACRITIC_TO_ID['<SOS>']]\n",
     "\n",
     "            for index, char in enumerate(line):\n",
+    "                if char in self.DIACRITICS:\n",
+    "                    continue\n",
+    "\n",
     "                if char in self.CHAR_TO_ID:\n",
     "                    x.append(self.CHAR_TO_ID[char])\n",
     "                else:\n",
-    "                    if char not in self.DIACRITICS:\n",
-    "                        x.append(self.CHAR_TO_ID['<UNK>'])\n",
+    "                    x.append(self.CHAR_TO_ID['<UNK>'])\n",
     "\n",
     "                if char not in self.LETTERS:\n",
     "                    y.append(self.DIACRITIC_TO_ID[''])\n",
+    "\n",
     "                else:\n",
     "                    char_diac = ''\n",
     "                    if index + 1 < len(line) and line[index + 1] in self.DIACRITICS:\n",
