DIAC2NAME pickle + new instructions

--- a/__tests__/MeshakkelatyV2 small test.ipynb
+++ b/__tests__/MeshakkelatyV2 small test.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +365,36 @@
     "    10: 'Shadda Fatha Tanwin', 11: 'Shadda Damma', 12: 'Shadda Damma Tanwin', \n",
     "    13: 'Shadda Kasra', 14: 'Shadda Kasra Tanwin', 15: 'PAD', 16: 'SOS', 17: 'EOS', 18: 'N/A'\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "with open('../utilities/pickle_files/DIACRITIC_TO_NAME.pickle', 'wb+') as diac2name:\n",
+    "    pkl.dump(DIAC_NAMES, diac2name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'No diacritic', 1: 'Fatha', 2: 'Fatha Tanwin', 3: 'Damma', 4: 'Damma Tanwin', 5: 'Kasra', 6: 'Kasra Tanwin', 7: 'Sukoon', 8: 'Shadda', 9: 'Shadda Fatha', 10: 'Shadda Fatha Tanwin', 11: 'Shadda Damma', 12: 'Shadda Damma Tanwin', 13: 'Shadda Kasra', 14: 'Shadda Kasra Tanwin', 15: 'PAD', 16: 'SOS', 17: 'EOS', 18: 'N/A'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('../utilities/pickle_files/DIACRITIC_TO_NAME.pickle', 'rb') as diac2name:\n",
+    "    diac_to_name = pkl.load(diac2name)\n",
+    "print(diac_to_name)"
    ]
   },
   {
